--- a/task2_dataScrap.ipynb
+++ b/task2_dataScrap.ipynb
@@ -7,6 +7,123 @@
       "outputs": [],
       "source": [
         "import ee\n",
+        "import time\n",
+        "import pandas as pd\n",
+        "from geopy.geocoders import Nominatim\n",
+        "from geopy.exc import GeocoderTimedOut\n",
+        "\n",
+        "ee.Authenticate()\n",
+        "ee.Initialize(project='environment-change-detection')\n",
+        "\n",
+        "zones = ee.FeatureCollection(\"projects/environment-change-detection/assets/MiningZones2\")\n",
+        "features = zones.toList(zones.size())\n",
+        "num_zones = features.size().getInfo()\n",
+        "\n",
+        "hansen = ee.Image(\"UMD/hansen/global_forest_change_2022_v1_10\")\n",
+        "loss_year = hansen.select(\"lossyear\")\n",
+        "treecover = hansen.select(\"treecover2000\").gt(30)\n",
+        "\n",
+        "modis = ee.ImageCollection(\"MODIS/006/MCD12Q1\") \\\n",
+        "    .filterDate(\"2020-01-01\", \"2020-12-31\") \\\n",
+        "    .first() \\\n",
+        "    .select(\"LC_Type1\")\n",
+        "forest_mask = modis.remap([1, 2, 4, 5], [1, 1, 1, 1], 0)\n",
+        "\n",
+        "DW = \"GOOGLE/DYNAMICWORLD/V1\"\n",
+        "geolocator = Nominatim(user_agent=\"mining_zone_locator\")\n",
+        "\n",
+        "def reverse_geocode(lat, lon, retries=3, timeout=5):\n",
+        "    for _ in range(retries):\n",
+        "        try:\n",
+        "            loc = geolocator.reverse((lat, lon), exactly_one=True, language='en', timeout=timeout)\n",
+        "            if loc:\n",
+        "                return loc.raw.get('display_name', '')\n",
+        "        except GeocoderTimedOut:\n",
+        "            time.sleep(2)\n",
+        "        except Exception:\n",
+        "            pass\n",
+        "    return None\n",
+        "\n",
+        "results = []\n",
+        "\n",
+        "for i in range(num_zones):\n",
+        "    try:\n",
+        "        zone = ee.Feature(features.get(i))\n",
+        "        name = zone.get(\"Name\").getInfo().replace(\" \", \"_\")\n",
+        "        lat = zone.get(\"Lat\").getInfo()\n",
+        "        lon = zone.get(\"Long\").getInfo()\n",
+        "        point = ee.Geometry.Point([lon, lat])\n",
+        "        region = ee.Geometry.Rectangle([lon - 0.025, lat - 0.025, lon + 0.025, lat + 0.025])\n",
+        "\n",
+        "        loss_mask = loss_year.gte(20).And(loss_year.lte(24))\n",
+        "        forest_loss_pct = loss_mask.reduceRegion(\n",
+        "            ee.Reducer.mean(), region, 30, maxPixels=1e13\n",
+        "        ).get(\"lossyear\").getInfo()\n",
+        "\n",
+        "        dist_img = treecover.Not().fastDistanceTransform(30).sqrt()\n",
+        "        mean_distance = dist_img.reduceRegion(\n",
+        "            ee.Reducer.mean(), region, 30, maxPixels=1e13\n",
+        "        ).get(\"distance\").getInfo()\n",
+        "\n",
+        "        urban20 = ee.ImageCollection(DW).filterBounds(region).filterDate(\"2020-01-01\", \"2020-12-31\") \\\n",
+        "                                         .map(lambda img: img.select(\"label\").eq(7)).mean()\n",
+        "        urban24 = ee.ImageCollection(DW).filterBounds(region).filterDate(\"2024-01-01\", \"2024-12-31\") \\\n",
+        "                                         .map(lambda img: img.select(\"label\").eq(7)).mean()\n",
+        "        urban_growth_mean = urban24.subtract(urban20).reduceRegion(\n",
+        "            ee.Reducer.mean(), region, 10, maxPixels=1e13\n",
+        "        ).get(\"label\").getInfo()\n",
+        "\n",
+        "        lu20 = ee.ImageCollection(DW).filterBounds(region).filterDate(\"2020-01-01\", \"2020-12-31\").select(\"label\").mode()\n",
+        "        lu24 = ee.ImageCollection(DW).filterBounds(region).filterDate(\"2024-01-01\", \"2024-12-31\").select(\"label\").mode()\n",
+        "        lu_change_mean = lu24.subtract(lu20).abs().reduceRegion(\n",
+        "            ee.Reducer.mean(), region, 10, maxPixels=1e13\n",
+        "        ).get(\"label\").getInfo()\n",
+        "\n",
+        "        forest_vector = forest_mask.selfMask().reduceToVectors(\n",
+        "            geometry=point.buffer(50000),\n",
+        "            geometryType='centroid',\n",
+        "            scale=500,\n",
+        "            maxPixels=1e13\n",
+        "        )\n",
+        "\n",
+        "        nearest = forest_vector.sort('system:distance').first()\n",
+        "        coords = nearest.geometry().coordinates().getInfo()\n",
+        "        forest_lon, forest_lat = coords\n",
+        "\n",
+        "        forest_name = reverse_geocode(forest_lat, forest_lon)\n",
+        "        time.sleep(1.5)\n",
+        "\n",
+        "        results.append({\n",
+        "            \"Zone\": name,\n",
+        "            \"Lat\": lat,\n",
+        "            \"Long\": lon,\n",
+        "            \"ForestLossPct\": forest_loss_pct,\n",
+        "            \"DistanceToForest\": mean_distance,\n",
+        "            \"UrbanGrowth\": urban_growth_mean,\n",
+        "            \"LanduseChange\": lu_change_mean,\n",
+        "            \"ForestLat\": forest_lat,\n",
+        "            \"ForestLon\": forest_lon,\n",
+        "            \"ForestName\": forest_name\n",
+        "        })\n",
+        "\n",
+        "        print(f\"✅ Processed: {name} → Forest: {forest_name}\")\n",
+        "        time.sleep(3)\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        print(f\"⚠️ Error zone {i}: {e}\")\n",
+        "\n",
+        "df = pd.DataFrame(results)\n",
+        "df.to_csv(\"zone_features_with_forest.csv\", index=False)\n",
+        "df.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import ee\n",
         "import pandas as pd\n",
         "import time\n",
         "\n",
